# firmware-unit-test

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  run_gcovr.sh
src/: Arduino.h  AsyncDelay.h  Wire.h
test/: main.cpp  test_asyncio.cpp  test_i2c.cpp  test_m24c02.cpp  test_swcrc.cpp  test_tca9548a.cpp  test_watchdog.cpp
